feat: Complete the pipeline for image score extraction

--- a/avito/extract_image_scores.ipynb
+++ b/avito/extract_image_scores.ipynb
@@ -529,6 +529,449 @@
     "img = Image.open(train_sample_dir + train_sample_df[\"image\"][0]+\".jpg\")\n",
     "plt.imshow(img)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"step3\"></a>\n",
+    "## Extract scores for images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, let's download some pre-trained models. The models will be downloaded into the directory `~/.keras/models`. We need to make sure the directory exists before downloading the models."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Create a model directory if it doesn't exist\n",
+    "models_dir = os.path.expanduser(os.path.join(\"~\", \".keras\", \"models\"))\n",
+    "if not os.path.exists(models_dir):\n",
+    "    os.makedirs(models_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/trang/anaconda3/lib/python3.6/site-packages/tensorflow/python/ops/nn_impl.py:666: calling reduce_mean (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "keep_dims is deprecated, use keepdims instead\n",
+      "WARNING:tensorflow:From /home/trang/anaconda3/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:1259: calling reduce_prod (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "keep_dims is deprecated, use keepdims instead\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Download the models\n",
+    "resnet_model = resnet50.ResNet50(weights='imagenet')\n",
+    "inception_model = inception_v3.InceptionV3(weights='imagenet')\n",
+    "xception_model = xception.Xception(weights='imagenet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "imagenet_class_index.json\r\n",
+      "inception_v3_weights_tf_dim_ordering_tf_kernels.h5\r\n",
+      "resnet50_weights_tf_dim_ordering_tf_kernels.h5\r\n",
+      "xception_weights_tf_dim_ordering_tf_kernels.h5\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check if the models are in the model directory\n",
+    "!ls  ~/.keras/models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's extract the image confidence using ResNet and save the output into a csv. The method `image_classify` provided in `utils.py` takes in a pre-trained model and an image name and returns the classification score for that image."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/trang/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_sample_df[\"image_confidence\"] = train_sample_df[\"image\"].apply(lambda image_name: image_classify(resnet_model, resnet50, image_name, train_sample_dir) if isinstance(image_name, str) else 0.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   user_id                 region              city  \\\n",
+      "item_id                                                               \n",
+      "b912c3c6a6ad  e00f8ff2eaf9   Свердловская область      Екатеринбург   \n",
+      "2dac0150717d  39aeb48f0017      Самарская область            Самара   \n",
+      "ba83aefab5dc  91e2f88dd6e3     Ростовская область    Ростов-на-Дону   \n",
+      "02996f1dd2ea  bf5cccea572d              Татарстан  Набережные Челны   \n",
+      "7c90be56d2ab  ef50846afc0b  Волгоградская область         Волгоград   \n",
+      "\n",
+      "             parent_category_name               category_name  \\\n",
+      "item_id                                                         \n",
+      "b912c3c6a6ad          Личные вещи  Товары для детей и игрушки   \n",
+      "2dac0150717d      Для дома и дачи           Мебель и интерьер   \n",
+      "ba83aefab5dc  Бытовая электроника               Аудио и видео   \n",
+      "02996f1dd2ea          Личные вещи  Товары для детей и игрушки   \n",
+      "7c90be56d2ab            Транспорт                  Автомобили   \n",
+      "\n",
+      "                                  param_1     param_2 param_3  \\\n",
+      "item_id                                                         \n",
+      "b912c3c6a6ad    Постельные принадлежности         NaN     NaN   \n",
+      "2dac0150717d                       Другое         NaN     NaN   \n",
+      "ba83aefab5dc  Видео, DVD и Blu-ray плееры         NaN     NaN   \n",
+      "02996f1dd2ea         Автомобильные кресла         NaN     NaN   \n",
+      "7c90be56d2ab                   С пробегом  ВАЗ (LADA)    2110   \n",
+      "\n",
+      "                              title  \\\n",
+      "item_id                               \n",
+      "b912c3c6a6ad  Кокоби(кокон для сна)   \n",
+      "2dac0150717d      Стойка для Одежды   \n",
+      "ba83aefab5dc         Philips bluray   \n",
+      "02996f1dd2ea             Автокресло   \n",
+      "7c90be56d2ab         ВАЗ 2110, 2003   \n",
+      "\n",
+      "                                                    description    price  \\\n",
+      "item_id                                                                    \n",
+      "b912c3c6a6ad  Кокон для сна малыша,пользовались меньше месяц...    400.0   \n",
+      "2dac0150717d          Стойка для одежды, под вешалки. С бутика.   3000.0   \n",
+      "ba83aefab5dc  В хорошем состоянии, домашний кинотеатр с blu ...   4000.0   \n",
+      "02996f1dd2ea                             Продам кресло от0-25кг   2200.0   \n",
+      "7c90be56d2ab                           Все вопросы по телефону.  40000.0   \n",
+      "\n",
+      "              item_seq_number activation_date user_type  \\\n",
+      "item_id                                                   \n",
+      "b912c3c6a6ad                2      2017-03-28   Private   \n",
+      "2dac0150717d               19      2017-03-26   Private   \n",
+      "ba83aefab5dc                9      2017-03-20   Private   \n",
+      "02996f1dd2ea              286      2017-03-25   Company   \n",
+      "7c90be56d2ab                3      2017-03-16   Private   \n",
+      "\n",
+      "                                                          image  image_top_1  \\\n",
+      "item_id                                                                        \n",
+      "b912c3c6a6ad  d10c7e016e03247a3bf2d13348fe959fe6f436c1caf64c...       1008.0   \n",
+      "2dac0150717d  79c9392cc51a9c81c6eb91eceb8e552171db39d7142700...        692.0   \n",
+      "ba83aefab5dc  b7f250ee3f39e1fedd77c141f273703f4a9be59db4b48a...       3032.0   \n",
+      "02996f1dd2ea  e6ef97e0725637ea84e3d203e82dadb43ed3cc0a1c8413...        796.0   \n",
+      "7c90be56d2ab  54a687a3a0fc1d68aed99bdaaf551c5c70b761b16fd0a2...       2264.0   \n",
+      "\n",
+      "              deal_probability  image_confidence  \n",
+      "item_id                                           \n",
+      "b912c3c6a6ad           0.12789          0.302808  \n",
+      "2dac0150717d           0.00000          0.088708  \n",
+      "ba83aefab5dc           0.43177          0.670999  \n",
+      "02996f1dd2ea           0.80323          0.268172  \n",
+      "7c90be56d2ab           0.20797          0.660595  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print (train_sample_df.head())\n",
+    "train_sample_df.to_csv(\"train_sample.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"step4\"></a>\n",
+    "## Putting it all together\n",
+    "Now we will extract scores for all train and test images.\n",
+    "### Extract scores for train images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we need to check if the train image directory exists. If not, we will create a folder for it. \n",
+    "\n",
+    "It will take a lot time for this exercise, so we will process the data in batches. We use `get_index_ranges` function from `utils.py` to get the ranges of row indices as a list of tuples. This allows us to keep track of how many rows we have processed and know where to resume next time run the cell. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "301\n",
+      "(1035000, 1040000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check that the train image directory exists\n",
+    "train_dir = os.path.expanduser(os.path.join('~', 'projects/kaggle_avito/images/train/'))\n",
+    "assert os.path.exists(train_dir)\n",
+    "# Get the ranges of start and end row indices\n",
+    "train_row_ranges = get_index_ranges(train_df.shape[0])\n",
+    "print (len(train_row_ranges))\n",
+    "print (train_row_ranges[207])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/trang/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Keep track of the indices of start and end steps so that we can resume later\n",
+    "start_train_i = 207\n",
+    "end_train_i = 301\n",
+    "# Loop over train_df, extract image confidence feature and save a csv file that contains it\n",
+    "for start_row, end_row in train_row_ranges[start_train_i: end_train_i]:\n",
+    "    temp_df = train_df[start_row: end_row]\n",
+    "    images_names = temp_df[\"image\"].tolist()\n",
+    "    temp_df[\"image_confidence\"] = temp_df[\"image\"].apply(lambda image_name: image_classify(inception_model, inception_v3, image_name, train_dir) if isinstance(image_name, str) else 0.0)\n",
+    "    temp_df.to_csv(\"train_{}_{}.csv\".format(start_row, end_row))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Combine all the csv files created at each step."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_combined = pd.read_csv(\"./train_0_5000.csv\", index_col=\"item_id\")\n",
+    "# Concatenate the train csv files\n",
+    "for start_row, end_row in train_row_ranges[1:]:\n",
+    "    temp_df = pd.read_csv(\"train_{}_{}.csv\".format(start_row, end_row), index_col=\"item_id\")\n",
+    "    train_combined = pd.concat([train_combined, temp_df])\n",
+    "train_combined.to_csv(\"train_combined.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1503424, 18)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (train_combined.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print out some statistics about the final combined file and do some sanitary checks against the original `train.csv`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train file has 1390836 images\n",
+      "These images are all unique? True\n",
+      "92.51122770422715\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_train_combined_images = train_combined[\"image\"].count()\n",
+    "print (\"Train file has {} images\".format(num_train_combined_images))\n",
+    "print (\"These images are all unique?\", num_train_combined_images == train_combined[\"image\"].nunique())\n",
+    "print (num_train_combined_images / train_combined.shape[0] * 100)\n",
+    "\n",
+    "# Check that the combined csv has the same number of images and ad items as the original train.csv\n",
+    "assert num_train_images == num_train_combined_images\n",
+    "assert train_df.shape[0] == train_combined.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extract scores for test images\n",
+    "We now follow the same process as we did for train images."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "102\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check that the test image directory exists\n",
+    "test_dir = os.path.expanduser(os.path.join('~', 'projects/kaggle_avito/images/test/'))\n",
+    "assert os.path.exists(test_dir)\n",
+    "# Get the ranges of start and end row indices\n",
+    "test_row_ranges = get_index_ranges(test_df.shape[0])\n",
+    "print (len(test_row_ranges))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/trang/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \"\"\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Loop over test_df, extract image confidence feature and save a csv file that contains it\n",
+    "for start_row, end_row in test_row_ranges[15:]:\n",
+    "    temp_df = test_df[start_row: end_row]\n",
+    "    images_names = temp_df[\"image\"].tolist()\n",
+    "    temp_df[\"image_confidence\"] = temp_df[\"image\"].apply(lambda image_name: image_classify(inception_model, inception_v3, image_name, test_dir) if isinstance(image_name, str) else 0.0)\n",
+    "    temp_df.to_csv(\"test_{}_{}.csv\".format(start_row, end_row))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_combined = pd.read_csv(\"./test_0_5000.csv\", index_col=\"item_id\")\n",
+    "# Concatenate the test csv files\n",
+    "for start_row, end_row in test_row_ranges[1:]:\n",
+    "    temp_df = pd.read_csv(\"test_{}_{}.csv\".format(start_row, end_row), index_col=\"item_id\")\n",
+    "    test_combined = pd.concat([test_combined, temp_df])\n",
+    "test_combined.to_csv(\"test_combined.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test file has 465829 images\n",
+      "These images are all unique? True\n",
+      "91.6196271718479\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_test_combined_images = test_combined[\"image\"].count()\n",
+    "print (\"Test file has {} images\".format(num_test_combined_images))\n",
+    "print (\"These images are all unique?\", num_test_combined_images == test_combined[\"image\"].nunique())\n",
+    "print (num_test_combined_images / test_combined.shape[0] * 100)\n",
+    "\n",
+    "# Check that the combined csv has the same number of images and ad items as the original test.csv\n",
+    "assert num_test_images == num_test_combined_images\n",
+    "assert test_df.shape[0] == test_combined.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next steps\n",
+    "Next step we will build a model to predict deal probability. We use the data from `train_combined.csv` and `test_combined.csv` which include `image_confidence` for the prediction model. The `image_confidence` may add some values, or it may not. We will see!"
+   ]
   }
  ],
  "metadata": {
