feat: Engineer categorical and numerical features

--- a/avito/lightGBM_model.ipynb
+++ b/avito/lightGBM_model.ipynb
@@ -36,7 +36,10 @@
     "We break this notebook down into 5 steps.\n",
     "\n",
     "- [Step 1](#step1): Read in csv files\n",
-    "- [Step 2](#step2): Engineer features: text, categorical and numerical features\n",
+    "- [Step 2](#step2): Engineer features: \n",
+    "    - [categorical features](#step2a)\n",
+    "    - [numerical features](#step2b)\n",
+    "    - [text](#step2b)\n",
     "- [Step 3](#step3): Perform Ridge Regression and k-fold cross validation\n",
     "- [Step 4](#step4): Train and validate the model\n",
     "- [Step 5](#step5): Predict deal probabilities\n",
@@ -46,13 +49,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "_cell_guid": "033852ed-2dd3-4bc3-bec1-ac3481ab175f",
     "_kg_hide-input": true,
     "_uuid": "af7422df064b7f16934cca9e86e8213bc9c667e8"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/trang/anaconda3/lib/python3.6/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
+      "/home/trang/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -100,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "_cell_guid": "bc719fcf-f418-4db5-a4fa-ebfa27716521",
     "_uuid": "02aad0b977053435e089bd189ea45e4a88731e87"
@@ -337,38 +352,38 @@
        "7c90be56d2ab           0.20797  "
       ]
      },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train = pd.read_csv(\"./csv/train.csv\", index_col = \"item_id\", parse_dates = [\"activation_date\"])\n",
+    "test = pd.read_csv(\"./csv/test.csv\", index_col = \"item_id\", parse_dates = [\"activation_date\"])\n",
+    "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54"
+      ]
+     },
      "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train = pd.read_csv('./csv/train.csv', index_col = \"item_id\", parse_dates = [\"activation_date\"])\n",
-    "test = pd.read_csv('./csv/test.csv', index_col = \"item_id\", parse_dates = [\"activation_date\"])\n",
-    "train.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "57"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "# Load and merge aggregated features into training and testing dataframes\n",
-    "af = pd.read_csv('csv/aggregated_features.csv', index_col=False)\n",
-    "train = train.merge(af, on='user_id', how='left')\n",
-    "test = test.merge(af, on='user_id', how='left')\n",
+    "af = pd.read_csv(\"csv/aggregated_features.csv\", index_col=False)\n",
+    "train = train.merge(af, on=\"user_id\", how=\"left\")\n",
+    "test = test.merge(af, on=\"user_id\", how=\"left\")\n",
     "\n",
     "agg_cols = list(af.columns)[1:]\n",
     "\n",
@@ -385,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -403,14 +418,92 @@
     "y_train = train.deal_probability.copy()\n",
     "train.drop(\"deal_probability\", axis=1, inplace=True)\n",
     "\n",
-    "print('Train shape:', train.shape)\n",
-    "print('Test shape:', test.shape)\n",
+    "print(\"Train shape:\", train.shape)\n",
+    "print(\"Test shape:\", test.shape)\n",
+    "\n",
+    "# Store the number of rows for each dataframe\n",
+    "n_train_rows = train.shape[0]\n",
+    "n_test_rows = test.shape[0]\n",
     "\n",
     "# Combine traing and testing data\n",
     "df = pd.concat([train, test], axis=0)\n",
+    "\n",
+    "# Remove unused features\n",
+    "df.drop([\"activation_date\", \"image\"],axis=1,inplace=True)\n",
+    "print(\"All data shape:\", df.shape)\n",
+    "\n",
     "del train, test\n",
-    "gc.collect()\n",
-    "print('All data shape:', df.shape)"
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "_cell_guid": "94a03718-1718-4981-88ef-532efcb435ee",
+    "_uuid": "5d8e0a1a86fe5fbfa5162d3180d0b1ebea94f97d"
+   },
+   "source": [
+    "<a id='step2'></a>\n",
+    "## Engineer features\n",
+    "<a id='step2a'></a>\n",
+    "### Categorical features\n",
+    "\n",
+    "We will first engineer categorical features: filling NA values and encoding the features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical = [\"user_id\", \"region\",\"city\", \"parent_category_name\", \"category_name\", \"user_type\", \"image_top_1\", \"param_1\", \"param_2\", \"param_3\"]\n",
+    "# Fill NA values for image_top_1 with -1\n",
+    "df[\"image_top_1\"].fillna(-1, inplace=True)\n",
+    "\n",
+    "# Encode the features using LabelEncoder since we are using a decision tree model.\n",
+    "# If we use other models, we should consider One-Hot-Encoding + PCA\n",
+    "# https://datascience.stackexchange.com/questions/9443/when-to-use-one-hot-encoding-vs-labelencoder-vs-dictvectorizor\n",
+    "label_encoder = preprocessing.LabelEncoder()\n",
+    "for col in categorical:\n",
+    "    df[col].fillna(\"unknown\")\n",
+    "    df[col] = label_encoder.fit_transform(df[col].astype(str))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='step2b'></a>\n",
+    "### Numerical features\n",
+    "\n",
+    "We will move on to numerical features. \n",
+    "- For prices, we will take the natural logarithm of price for reasons describe [here](https://stats.stackexchange.com/questions/298/in-linear-regression-when-is-it-appropriate-to-use-the-log-of-an-independent-va). Then we will fill NA prices with the median value. \n",
+    "- For aggregated features, we will simply fill NA values with -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"price\"] = np.log1p(df[\"price\"])\n",
+    "df[\"price\"].fillna(df.price.median(), inplace=True)\n",
+    "for col in agg_cols:\n",
+    "    df[col].fillna(-1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='step2c'></a>\n",
+    "### Text features\n",
+    "\n",
+    "Now we will engineer text features. \n",
+    "- For prices, we will take the natural logarithm of price for reasons describe [here](https://stats.stackexchange.com/questions/298/in-linear-regression-when-is-it-appropriate-to-use-the-log-of-an-independent-va). Then we will fill NA prices with the median value. \n",
+    "- For aggregated features, we will simply fill NA values with -1"
    ]
   }
  ],
