--- a/avito/lightGBM_model.ipynb
+++ b/avito/lightGBM_model.ipynb
@@ -31,18 +31,19 @@
     "\n",
     "### LightGBM model\n",
     "\n",
-    "In this notebook, we will train a [LightGBM](https://github.com/Microsoft/LightGBM) model to predict deal probability. LightGBM is a fast, distributed, high performance gradient boosting framework based on decision tree algorithms. It is under the umbrella of the [DMTK](http://github.com/microsoft/dmtk) project of Microsoft.\n",
+    "In this notebook, we will train a [LightGBM](https://github.com/Microsoft/LightGBM) model to predict deal probabilities. LightGBM is a fast, distributed, high performance gradient boosting framework based on decision tree algorithms. It is under the umbrella of the [DMTK](http://github.com/microsoft/dmtk) project of Microsoft.\n",
     "\n",
-    "We break this notebook down into 5 steps.\n",
+    "We break this notebook down into 4 steps:\n",
     "\n",
     "- [Step 1](#step1): Read in csv files\n",
     "- [Step 2](#step2): Engineer features: \n",
     "    - [categorical features](#step2a)\n",
     "    - [numerical features](#step2b)\n",
-    "    - [text](#step2b)\n",
-    "- [Step 3](#step3): Perform Ridge Regression and k-fold cross validation\n",
-    "- [Step 4](#step4): Train and validate the model\n",
-    "- [Step 5](#step5): Predict deal probabilities\n",
+    "    - [text](#step2c)\n",
+    "- [Step 3](#step3): Train and validate the model\n",
+    "- [Step 4](#step4): Predict deal probabilities\n",
+    "\n",
+    "Then I'll end this notebook with [results and ideas for further improvement](#step5).\n",
     "\n",
     "First, let's import some libraries."
    ]
@@ -60,8 +61,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/trang/anaconda3/lib/python3.6/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
       "/home/trang/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
@@ -69,20 +68,19 @@
     }
    ],
    "source": [
+    "import time\n",
+    "import gc\n",
+    "import random\n",
+    "import pickle\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "import gc\n",
-    "import random\n",
-    "random.seed(2018)\n",
-    "\n",
-    "from sklearn import metrics\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn import feature_selection\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import preprocessing\n",
     "from sklearn.linear_model import Ridge\n",
-    "from sklearn.cross_validation import KFold\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
     "from sklearn.pipeline import FeatureUnion\n",
     "from scipy.sparse import hstack, csr_matrix\n",
@@ -116,10 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "_cell_guid": "bc719fcf-f418-4db5-a4fa-ebfa27716521",
-    "_uuid": "02aad0b977053435e089bd189ea45e4a88731e87"
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -409,8 +404,18 @@
      "text": [
       "Train shape: (1503424, 19)\n",
       "Test shape: (508438, 19)\n",
-      "All data shape: (2011862, 19)\n"
+      "All data shape: (2011862, 17)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -453,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,18 +483,18 @@
     "### Numerical features\n",
     "\n",
     "We will move on to numerical features. \n",
-    "- For prices, we will take the natural logarithm of price for reasons describe [here](https://stats.stackexchange.com/questions/298/in-linear-regression-when-is-it-appropriate-to-use-the-log-of-an-independent-va). Then we will fill NA prices with the median value. \n",
+    "- For prices, we will fill NA prices with the median value. Then we will take the natural logarithm of price for reasons described [here](https://stats.stackexchange.com/questions/298/in-linear-regression-when-is-it-appropriate-to-use-the-log-of-an-independent-va).  \n",
     "- For aggregated features, we will simply fill NA values with -1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"price\"] = np.log1p(df[\"price\"])\n",
     "df[\"price\"].fillna(df.price.median(), inplace=True)\n",
+    "df[\"price\"] = np.log1p(df[\"price\"])\n",
     "for col in agg_cols:\n",
     "    df[col].fillna(-1, inplace=True)"
    ]
@@ -501,9 +506,241 @@
     "<a id='step2c'></a>\n",
     "### Text features\n",
     "\n",
-    "Now we will engineer text features. \n",
-    "- For prices, we will take the natural logarithm of price for reasons describe [here](https://stats.stackexchange.com/questions/298/in-linear-regression-when-is-it-appropriate-to-use-the-log-of-an-independent-va). Then we will fill NA prices with the median value. \n",
-    "- For aggregated features, we will simply fill NA values with -1"
+    "Now we will engineer text features. In the cell below, we will create new text features by counting the number of words, characters, digits, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating new text features took: 45.33 minutes\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_text_feat = time.time()\n",
+    "\n",
+    "text_feats = [\"description\", \"title\"]\n",
+    "df[\"desc_punc\"] = df[\"description\"].apply(lambda x: len([c for c in str(x) if c in string.punctuation]))\n",
+    "\n",
+    "for col in text_feats:\n",
+    "    # Change text to lowercase and lemmatize text\n",
+    "    df[col] = df[col].apply(lambda x: pre_process(x))\n",
+    "    df[col] = df[col].fillna(\"unknown\")\n",
+    "    df[col + \"_num_words\"] = df[col].apply(lambda x: len(x.split()))\n",
+    "    df[col + \"_num_unique_words\"] = df[col].apply(lambda x: len(set(w for w in x.split())))\n",
+    "    df[col + \"_words_vs_unique\"] = df[col + \"_num_unique_words\"] / df[col + \"_num_words\"] * 100 \n",
+    "    df[col + \"_num_chars\"] = df[col].apply(lambda x: len(x))\n",
+    "    df[col + \"_num_alphabets\"] = df[col].apply(lambda x: (x.count(r\"[a-zA-Z]\")))\n",
+    "    df[col + \"_num_alphanumeric\"] = df[col].apply(lambda x: (x.count(r\"[A-Za-z0-9]\")))\n",
+    "    df[col + \"_num_digits\"] = df[col].apply(lambda x: (x.count(\"[0-9]\")))\n",
+    "    \n",
+    "df[\"title_desc_len_ratio\"] = df[\"title_num_chars\"] / df[\"description_num_chars\"] * 100\n",
+    "df[\"desc_punc_ratio\"] = df[\"desc_punc\"] / df[\"description_num_chars\"] *100\n",
+    "\n",
+    "print(\"Creating new text features took: %0.2f minutes\"%((time.time() - start_text_feat) / 60))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we will vectorize text."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vectorization runtime: 7.26 minutes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Helper function to return a column from a dataframe\n",
+    "def get_col(col_name): \n",
+    "    return lambda x: x[col_name]\n",
+    "\n",
+    "russian_stop = set(stopwords.words(\"russian\"))\n",
+    "tfidf_para = {\n",
+    "    \"stop_words\": russian_stop,\n",
+    "    \"analyzer\": \"word\",\n",
+    "    \"token_pattern\": r\"\\w{1,}\",\n",
+    "    \"sublinear_tf\": True,\n",
+    "    \"dtype\": np.float32,\n",
+    "    \"norm\": \"l2\",\n",
+    "    \"smooth_idf\":False\n",
+    "}\n",
+    "\n",
+    "vectorizer = FeatureUnion([\n",
+    "        (\"description\", TfidfVectorizer(\n",
+    "            ngram_range=(1, 2),\n",
+    "            max_features=15000,\n",
+    "            **tfidf_para,\n",
+    "            preprocessor=get_col(\"description\"))),\n",
+    "        (\"title\", CountVectorizer(\n",
+    "            ngram_range=(1, 2),\n",
+    "            stop_words = russian_stop,\n",
+    "            preprocessor=get_col(\"title\")))\n",
+    "    ])\n",
+    "    \n",
+    "start_vect=time.time()\n",
+    "\n",
+    "vectorizer.fit(df.to_dict(\"records\"))\n",
+    "vectorized_features = vectorizer.transform(df.to_dict(\"records\"))\n",
+    "\n",
+    "# Store the names of vectorized text features in a list for use later with LightGBM\n",
+    "feature_names = vectorizer.get_feature_names()\n",
+    "\n",
+    "print(\"Vectorization runtime: %0.2f minutes\"%((time.time() - start_vect) / 60))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's print out some information about `vectorized_features`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'scipy.sparse.csr.csr_matrix'>\n",
+      "  (0, 6041)\t0.4543893833878289\n",
+      "  (0, 7068)\t0.25929010686776116\n",
+      "  (0, 7081)\t0.2746891748346552\n",
+      "  (0, 7307)\t0.22512829318931382\n",
+      "  (0, 9905)\t0.26460858705946444\n",
+      "  (0, 9910)\t0.3905090765801592\n",
+      "  (0, 12056)\t0.2866256844030417\n",
+      "  (0, 12455)\t0.3570984005206791\n",
+      "  (0, 14250)\t0.1846703379952123\n",
+      "  (0, 14277)\t0.3658829184219402\n",
+      "  (0, 709955)\t1.0\n",
+      "  (0, 709956)\t1.0\n",
+      "  (0, 709963)\t1.0\n",
+      "  (0, 710044)\t1.0\n",
+      "  (0, 1079815)\t1.0\n",
+      "  (1, 2957)\t0.5775736475334812\n",
+      "  (1, 3261)\t0.553098801207857\n",
+      "  (1, 8510)\t0.39416011875467694\n",
+      "  (1, 12917)\t0.45291080640739895\n",
+      "  (1, 883789)\t1.0\n",
+      "  (1, 1097960)\t1.0\n",
+      "  (1, 1098177)\t1.0\n",
+      "  (2, 2131)\t0.40594257312454046\n",
+      "  (2, 2249)\t0.2500699308745464\n",
+      "  (2, 4712)\t0.2697888109891143\n",
+      "  :\t:\n",
+      "  (2, 7826)\t0.3238878711826573\n",
+      "  (2, 10946)\t0.18077023298841607\n",
+      "  (2, 12313)\t0.36779397374107975\n",
+      "  (2, 12499)\t0.0958742990789805\n",
+      "  (2, 13118)\t0.29891956069067105\n",
+      "  (2, 13364)\t0.15083932622521384\n",
+      "  (2, 14175)\t0.12413745049681915\n",
+      "  (2, 14207)\t0.14984499153463327\n",
+      "  (2, 172218)\t1.0\n",
+      "  (2, 349917)\t1.0\n",
+      "  (2, 350266)\t1.0\n",
+      "  (3, 6504)\t0.5553453927322807\n",
+      "  (3, 10408)\t0.22051268524992526\n",
+      "  (3, 10476)\t0.8018513892330027\n",
+      "  (3, 457942)\t1.0\n",
+      "  (4, 3156)\t0.314879894466968\n",
+      "  (4, 3166)\t0.512748381722166\n",
+      "  (4, 3545)\t0.4471705362789722\n",
+      "  (4, 3554)\t0.5338940569818313\n",
+      "  (4, 13145)\t0.3910695545618815\n",
+      "  (4, 54551)\t1.0\n",
+      "  (4, 59006)\t1.0\n",
+      "  (4, 59017)\t1.0\n",
+      "  (4, 529675)\t1.0\n",
+      "  (4, 529695)\t1.0\n",
+      "1242351\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(vectorized_features))\n",
+    "print(vectorized_features[:5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before moving on, let's save `feature_names` and `df` that includes engineered features. This will save time in case we need to stop this notebook now, and resume it later. When we resume, we can just load these saved items without running the above code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop text columns\n",
+    "df.drop(text_feats, axis=1, inplace=True)\n",
+    "\n",
+    "# Save df and feature_names so that we can quickly load them another time\n",
+    "df.to_csv(\"csv/df_engineered_feats.csv\")\n",
+    "\n",
+    "PICKLED_FEATS = \"vectorized_feats.dat\"\n",
+    "\n",
+    "with open(PICKLED_FEATS, \"wb\") as f:\n",
+    "    pickle.dump(feature_names, f)\n",
+    "# Uncomment below to load the saved features\n",
+    "#with open(PICKLED_FEATS, \"rb\") as f:\n",
+    " #   feature_names = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have finished feature engineering, we will stack dense features and sparse vectorized text features together. Before stacking them, we have to convert dense features to sparse matrices using `scipy.sparse.csr_matrix`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of featues:  1242383\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert dense features to sparse matrices and stack them with sparse vectorized text features\n",
+    "X = hstack([csr_matrix(df[:n_train_rows]), vectorized_features[0:n_train_rows]])\n",
+    "X_test = hstack([csr_matrix(df[n_train_rows:]), vectorized_features[n_train_rows:]])\n",
+    "\n",
+    "# Update feature_names with the column names of df\n",
+    "feature_names = df.columns.tolist() + feature_names\n",
+    "print(\"Number of featues: \", len(feature_names))\n",
+    "\n",
+    "del df, vectorizer, vectorized_features\n",
+    "gc.collect()"
    ]
   }
  ],
