feat: Add more info about feature importance

--- a/avito/lightGBM_model.ipynb
+++ b/avito/lightGBM_model.ipynb
@@ -450,6 +450,9 @@
    "source": [
     "<a id='step2'></a>\n",
     "## Engineer features\n",
+    "\n",
+    "We will engineer three types of features in this notebook: categorical, numberical and text features. For images, see the `extract_image_scores.ipynb` notebook on how the scores were extracted.\n",
+    "\n",
     "<a id='step2a'></a>\n",
     "### Categorical features\n",
     "\n",
@@ -755,7 +758,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we are ready to go! In this section, we will train a LightGBM model. I tuned these two parameters manually, trying the following values:\n",
+    "Now we are ready to go! In this section, we will train a LightGBM model. I didn't end up using the image classification scores as they didn't help improve the model accuracy.\n",
+    "\n",
+    "I tuned these two parameters manually, trying the following values:\n",
     "- `learning_rate`: 0.1, 0.01, 0.015, 0.02\n",
     "- `num_leaves`: 30, 60, 100, 200\n",
     "\n",
@@ -898,8 +903,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='step4'></a>\n",
-    "## Predict deal probabilities"
+    "Let's plot the features to see which ones are the most important. "
    ]
   },
   {
@@ -940,6 +944,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "It's not surprising to see price at the top. It is interesting to see that the aggregated feature `avg_days_up_user` is the number 4 feature. As we can see in the below correlation score, the longer the average number of days the average item from a user has been put up for sale, the less likely a deal happens for an item belonging to the same user. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.15299005006946947"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[:n_train_rows, \"avg_days_up_user\"].corr(y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='step4'></a>\n",
+    "## Predict deal probabilities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Finally we are ready to generate predictions and submit the results on Kaggle! "
    ]
   },
@@ -970,7 +1009,7 @@
    "metadata": {},
    "source": [
     "<a id='step5'></a>\n",
-    "## Results and Further Improvement\n",
+    "## Results and further improvement\n",
     "\n",
     "With this model, I got an RSME of 0.2220 on the public leader board and 0.2255 on the private one. The 1st prize winner's scores are 0.2105 and 0.2150 on respective boards\n",
     "\n",
